# aioaprs

./: PUBLISH.md  README.md  pyproject.toml  pytest.ini  requirements.txt
aioaprs/: aioaprs.py  parser.py  serializer.py
aioaprs/serializers/: telemetry.py
src/: aioaprs.py  config.py  default.py  packets.py  parser.py  serializer.py
src/aioaprs/: client.py  config.py  parser.py  serializer.py  version.py
src/aioaprs/enrichers/: telemetry.py
src/aioaprs/parsers/: message.py  telemetry.py
src/aioaprs/serializers/: telemetry.py
tests/: test_parser.py  test_serializer.py
tests/parsing/: test_parse_telemetry.py
tests/serialization/: test_serialize_telemetry.py
tests/test_parsers/: test_parsers_message.py  test_parsers_telemetry.py
tests/test_serializers/: test_serializers_telemetry.py
