[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aioaprs"
version = "0.1.0"
description = "Async Python3 libraray implementing an APRS-IS client"
readme = "README.md"
authors = [
    { name = "Luca Cireddu", email = "sardylan@gmail.com" },
]
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO"
]
keywords = ["aprs", "aprs-is", "socket", "aiosocket", "ham", "hamradio"]
dependencies = []
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/sardylan/aioaprs"
